<resources>
    <string name="app_name">iChoice</string>
    <string name="img_des">welcome</string>
    <string name="text_guide1">More convenient to \n review your personal data</string>
    <string name="text_guide2">Synchronize and share \n your data faster vie Bluetooth</string>
    <string name="text_guide3">Your personal path to control \n over your vital signs</string>
    <string name="welcome">Welcome</string>
    <string name="password_is_incorrect">password is incorrect</string>
    <string name="Email_address_does_not_exist">Email address does not exist</string>
    <string name="user_name">E-mail</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sum">SUM</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="rsend_code">Resend</string>
    <string name="send_code_time">Seconds</string>
    <string name="account_has_already_exists">Email has been registered</string>
    <string name="send_code">Send code</string>
    <string name="what_name">What\'s your name?</string>
    <string name="what_gender">What\'s your gender?</string>
    <string name="what_birthday">What\'s your Birthday?</string>
    <string name="what_height">What\'s your Height?</string>
    <string name="what_weight">What\'s your Weight?</string>
    <string name="btn_continue">Continue</string>
    <string name="man">man</string>
    <string name="woman">woman</string>
    <string name="first_name">First name</string>
    <string name="family_name">Family name</string>
    <string name="avatar_tip">to get accurate picture of your health,please \n tell us a few things about yourself</string>
    <string name="take_camera">Take Camera</string>
    <string name="take_album">Choose From Library</string>
    <string name="cancel">Cancel</string>
    <string name="email_phone">E-mail</string>
    <string name="validate_code">Enter The Code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_pwd_tip">Password must be 8–16 characters and \n include both numbers and letters</string>
    <string name="send">Send</string>
    <string name="finish">Finish</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="new_user">New User</string>
    <string name="avatar_popup_tip">Are you sure you want to quit as your \n data has not been saved?</string>
    <string name="fogot_tip">Please specify which e-mail address number \n the new password should be sent to </string>
    <string name="forgot_password">Forgot password</string>
    <string name="health_report">Health Report</string>
    <string name="health_check">Health Check</string>
    <string name="profile">Profile</string>
    <string name="old_password_is_incorrect">The old password is incorrect</string>
    <string name="logout">Logout</string>
    <string name="my_devices">My Device</string>
    <string name="my_devices_list">Devices</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="about_choicemmed">About ChoiceMMed</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="version">Version:V</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="done">Done</string>
    <string name="y">Y</string>
    <string name="m">M</string>
    <string name="d">D</string>
    <string name="add_devices">Add device</string>
    <string name="add_devices_title">Add Devices</string>
    <string name="information">Information</string>
    <string name="current_password">Current Password</string>
    <string name="search_devices_instructions">Please turm on the bluetooth of your mobile \n
        device and blood pressure. The Bluethooth \n icon on bloodpressure will keep flashing \n
        until the connection is successful</string>
    <string name="ox_working_mode_point">Point Measurement</string>
    <string name="real_time_measurement">Real-time Measurement</string>
    <string name="Blood_Pressure">Blood Pressure</string>
    <string name="CBP1K1">CBP1K1</string>
    <string name="CBP111">CBP111</string>
    <string name="MD300C208">MD300C208</string>
    <string name="MD300C208S">MD300C208S</string>
    <string name="MD300C228">MD300C228</string>
    <string name="MD300C228S">MD300C228S</string>
    <string name="MD300CI218">MD300CI218</string>
    <string name="MD300I_G">MD300I-G</string>
    <string name="OX200">OX200</string>
    <string name="conect_button">Connect the device</string>
    <string name="download_ichoice_relax">Please install ichoiceRelax APP</string>
    <string name="connect_text_cft308">Please turn on the bluetooth of your mobile device.
        The bluetooth icon on your device will keep flashing during connection,
        and will stay on once the connection is successful.</string>
    <string name="connect_text">Please turn on the bluetooth of your mobile device and blood pressure
        (the switch ofthe blood pressure is the "volume-" button).
        The blutooth icon on blood pressure will keep flashing during connection,
        and will stay on once the connection is successful.</string>
    <string name="search_device">Searching for your device</string>
    <string name="success">Success</string>
    <string name="connect_failure">Could not connect the device, please confirm whether
        the bluetooth of blood pressure has been turned on or not, and  make sure you
        have delete the other blood pressure which has been connect the App</string>
    <string name="retry">Retry</string>
    <string name="connect_failure_thermometer">Could not connect the device, please confirm whether
        the bluetooth of your mobile device has been turned on or not, and make sure you
        have delete the other thermometer which has been connected to the APP</string>
    <string name="connect_failure_blood_pressure">Could not connect the device, please confirm whether
        the bluetooth of your mobile device has been turned on or not, and make sure you
        have delete the other blood pressure which has been connected to the APP</string>
    <string name="connect_failure_pulse_oximeter">Could not connect the device, please confirm whether
        the bluetooth of your mobile device has been turned on or not, and make sure you
        have delete the other pulse oximeter which has been connected to the APP</string>
    <string name="connect_failure_wrist_pulse_oximeter">Could not connect the device, please confirm whether
        the bluetooth of your mobile device has been turned on or not, and make sure you
        have delete the other wrist pulse oximeter which has been connected to the APP</string>
    <string name="today">Today</string>
    <string name="measurement">Measurement</string>
    <string name="ox_real_measurement">Real-time</string>
    <string name="historical_results">Historical Results</string>
    <string name="historical_trend">Historical Trend</string>
    <string name="trend">Trend</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse Rate</string>
    <string name="mmhg">(mmHg)</string>
    <string name="mmHg">mmHg</string>
    <string name="kPa">kPa</string>
    <string name="kpa">(kpa)</string>
    <string name="bpm">(bpm)</string>
    <string name="bpreference_title">Blood pressure reference range:</string>
    <string name="ideal">ideal blood pressure</string>
    <string name="normal">normal blood pressure</string>
    <string name="ideal_mmhg">120/80 mmHg</string>
    <string name="normal_mmhg">130/85 mmHg</string>
    <string name="unit">Unit</string>
    <string name="how_to_use">How to use</string>
    <string name="faq">FAQ</string>
    <string name="delete_device">Delete Device</string>
    <string name="working_mode">Working mode</string>
    <string name="choice_working_mode">Please choose the work mode</string>
    <string name="dialogTitle">Tip</string>
    <string name="disconnect_dialogMsg">Disconnect or not</string>
    <string name="dialog_not">Not</string>
    <string name="dialog_disconnect">Disconnrct</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="ecg">ECG</string>
    <string name="pulse_qximeter">Pulse Oximeter</string>
    <string name="therometer">Thermometer</string>
    <string name="scale">Scale</string>
    <string name="fitness_tracker">Fitness Tracker</string>
    <string name="need_system_window">Please allow window permissions</string>
    <string name="hrv">ichoiceRelax</string>
    <string name="SYS">SYS</string>
    <string name="DIA">DIA</string>
    <string name="PR">PR</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="normal_sys">90-140</string>
    <string name="normal_dia">60-90</string>
    <string name="normal_pulse">60-100</string>
    <string name="normal_sys_kpa">12-19</string>
    <string name="normal_dia_kpa">8-12</string>
    <string name="Pulse">Pulse</string>
    <string name="bpm_">bpm</string>
    <string name="tips">TIPS</string>
    <string name="stay">Stay tuned</string>
    <string name="tip_empty">Please fill the required field</string>
    <string name="tip_email_incorrect">Email address format is incorrect</string>
    <string name="tip_password_not">Password must be 8-16characters and include both numbers and letters</string>
    <string name="inconsistent_password">Inconsistent password</string>
    <string name="login_failed">User login failed</string>
    <string name="send_email">A verification code has bean sent to your mailbox</string>
    <string name="send_phone">A verification code has bean sent to your phone</string>
    <string name="password_succeed">Password change succeeded</string>
    <string name="tip_logout">Are you Sure you want to log out ?</string>
    <string name="images_fails">The image does not meet the uploading standard, and the upload fails</string>
    <string name="account_registered">This mailbox has been registered</string>
    <string name="code_fail">The account parameter Email  cannot be empty, or the format is not correct.</string>
    <string name="code_timeout">Verification code timeout（vaild time 5 minutes）</string>
    <string name="code_error">Verification code error</string>
    <string name="code_not">No captcha records</string>
    <string name="no_signal">You have no signal!</string>
    <string name="tip_birthday">Birthday format is invalid</string>
    <string name="tip_permission">Please open the hover window permission of iChoice, because some functions need to use it.</string>
    <string name="tip_logging">Logging...</string>
    <string name="tip_delete">Are you sure you want to delete device？</string>
    <string name="email_not_exist">Email address odes not exist</string>
    <string name="cbp1k1">Blood Pressure CBP1K1</string>
    <string name="device_bound">The device is bound</string>
    <string name="permission_fail">User failed to get permission</string>
    <string name="login_fail">User login failed</string>
    <string name="login_timeout">Login timeout, please login again</string>
    <string name="rr">RR</string>
    <string name="ox_spo2">SpO2</string>
    <string name="ox_pr">PR</string>
    <string name="ox_bpm">(bpm)</string>
    <string name="ox_percent">(%)</string>
</resources>