<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingRight="@dimen/dp_34"
    android:paddingLeft="@dimen/dp_34"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_75">

        <ImageView
            android:id="@+id/img_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_9"
            android:src="@mipmap/ic_username" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_email">

            <EditText
                android:id="@+id/et_register_emai_phone"
                style="@style/style_register_et"
                android:singleLine="true"
                android:hint="@string/email_phone" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32">

        <ImageView
            android:id="@+id/img_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_9"
            android:src="@mipmap/ic_validate_code" />
        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_25"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_6"
            android:paddingRight="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_5"
            android:layout_alignParentRight="true"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_11"
            android:background="@drawable/selector_btn_positive"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_code">

            <EditText
                android:id="@+id/et_register_code"
                style="@style/style_register_et"
                android:digits="0123456789"
                android:maxLength="6"
                android:singleLine="true"
                android:hint="@string/validate_code" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32">

        <ImageView
            android:id="@+id/img_new_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_9"
            android:src="@mipmap/ic_password" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/selector_passwod"
            android:layout_toRightOf="@+id/img_new_pwd">

            <EditText
                android:id="@+id/et_register_password"
                style="@style/style_register_et"
                android:maxLength="16"
                android:inputType="textPassword"
                android:hint="@string/new_password" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32">

        <ImageView
            android:id="@+id/img_confirm_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_9"
            android:src="@mipmap/ic_password" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/selector_passwod"
            android:layout_toRightOf="@+id/img_confirm_pwd">

            <EditText
                android:id="@+id/et_register_confirm_password"
                style="@style/style_register_et"
                android:maxLength="16"
                android:inputType="textPassword"
                android:hint="@string/confirm_password" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/color_414141"
        android:textSize="@dimen/sp_12"
        android:text="@string/forget_pwd_tip"/>
    <Button
        android:id="@+id/btn_register"
        style="@style/style_button"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/register"
        android:background="@drawable/selector_btn_positive"/>

</LinearLayout>