<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:stv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".healthcheck.activity.bloodpressure.DeviceSettingbpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.allen.library.SuperTextView
            android:id="@+id/unit_bp"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="@dimen/dp_2"
            stv:sLeftTextString="@string/unit"
            stv:sLeftTextSize="@dimen/sp_15"
            stv:sLeftTextColor="@color/color_000000"
            stv:sRightIconRes="@drawable/ic_right_next" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12">
            <View style="@style/horizontal_line_style" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.allen.library.SuperTextView
            android:id="@+id/how_use_bp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_2"
            stv:sLeftTextString="@string/how_to_use"
            stv:sLeftTextSize="@dimen/sp_15"
            stv:sLeftTextColor="@color/color_000000"
            stv:sRightIconRes="@drawable/ic_right_next" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12">
            <View style="@style/horizontal_line_style" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.allen.library.SuperTextView
            android:id="@+id/faq_bp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_2"
            stv:sLeftTextString="@string/faq"
            stv:sLeftTextSize="@dimen/sp_15"
            stv:sLeftTextColor="@color/color_000000"
            stv:sRightIconRes="@drawable/ic_right_next" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12">
            <View style="@style/horizontal_line_style" />
        </LinearLayout>



        <Button
            android:id="@+id/delete_device_bp"
            style="@style/style_button"
            android:layout_marginTop="290dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/selector_btn_positive"
            android:text="@string/delete_device" />
    </LinearLayout>
</LinearLayout>